src/components/crds-image/crds-image.scss
@import '../../assets//stylesheets/globals/variables';

.crds-img-container {
  display: flex;
  position: relative;
  overflow: hidden;
  background-color: rgb(221, 221, 221);

  .crds-img {
    width: 100%;
    height: auto;
    display: block;
  }
  .crds-img.loaded {
    animation-name: fade-in;
    animation-duration: 1s;
  }
}

@keyframes fade-in {
  0% {
    visibility: hidden;
    filter: blur(20px);
  }
  50% {
    filter: blur(20px);
  }
  100% {
    filter: blur(0.1px);
  }
}

.crds-img-container {
  position: relative;
  &:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: (2 / 3) * 100%;
  }
}

